--- a/app/views/artists/_form.html.slim
+++ b/app/views/artists/_form.html.slim
@@ -8,20 +8,11 @@
 
   .field
     = f.label :name
-    = f.text_field :name
+    = f.text_field :name, required: true
   .field
     = f.label :description, 'Tell us more about yourself'
     = f.text_area :description
   .field
     = f.label :tags
-    = f.text_field :tag_list, id: 'tag_list', value: f.object.tag_list.to_s
-  .field
-    = f.label :latitude
-    = f.text_field :latitude
-  .field
-    = f.label :longitude
-    = f.text_field :longitude
-  .field
-    = f.label :image_url
-    = f.text_field :image_url
+    = f.text_field :tag_list, id: 'tag_list', value: f.object.tag_list.to_s, placeholder: 'Type and hit enter to add tags..'
   .actions = f.submit
