--- a/app/views/artists/edit.html.slim
+++ b/app/views/artists/edit.html.slim
@@ -2,7 +2,6 @@ h1 Editing artist
 
 == render 'form'
 
-= link_to 'Show', @artist
+= link_to 'Show', @artist, class: 'btn btn-info'
 '  |
-= link_to 'Back', artists_path
-
+= link_to 'Back', artists_path, class: 'btn btn-info'
