--- a/app/views/artists/new.html.slim
+++ b/app/views/artists/new.html.slim
@@ -1,5 +1,5 @@
-h1 New artist
+h1 Add a new artist
 
 == render 'form'
 
-= link_to 'Back', artists_path
+= link_to 'Back', artists_path, class: 'btn btn-info'
